<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/common_margin"
            android:paddingBottom="@dimen/common_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_exclamation_icon"/>

            <TextView
                style="@style/textMedium.bold"
                android:layout_marginTop="@dimen/common_margin"
                android:text="@string/no_network"/>

            <TextView
                style="@style/textMedium"
                android:layout_marginTop="@dimen/common_margin_small"
                android:gravity="center"
                android:text="@string/no_network_guide"
                android:lineSpacingExtra="@dimen/common_line_spacing"/>

            <TextView
                android:id="@+id/btnReconnect"
                style="@style/btnDefault"
                android:layout_marginTop="@dimen/common_margin"
                android:textColor="@color/white"
                android:background="@drawable/btn_primary"
                android:text="@string/no_network_btn"/>

            <LinearLayout
                android:id="@+id/layoutGoDown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    style="@style/textSmall"
                    android:layout_marginTop="@dimen/no_network_go_down_top_margin"
                    android:gravity="center"
                    android:text="@string/no_network_go_down_guide"
                    android:lineSpacingExtra="@dimen/common_line_spacing" />

                <TextView
                    android:id="@+id/btnGoDown"
                    style="@style/btnDefault"
                    android:layout_marginTop="@dimen/common_margin"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_primary"
                    android:text="@string/no_network_go_down" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>