<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/txtType"
        android:minWidth="@dimen/notice_type_width"
        style="@style/borderDefault" />
    <TextView
        android:id="@+id/txtTypeFirst"
        android:minWidth="@dimen/notice_type_width"
        style="@style/borderDefault"
        android:background="@drawable/border_red"
        android:text="@string/notice_type_first"
        android:textColor="@color/color_red"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/txtTypeEvent"
        android:minWidth="@dimen/notice_type_width"
        style="@style/borderDefault"
        android:background="@drawable/border_primary"
        android:text="@string/notice_type_event"
        android:textColor="@color/colorPrimary"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/txtTypeNone"
        android:minWidth="@dimen/notice_type_width"
        style="@style/borderDefault"
        android:background="@drawable/border_gray"
        android:text="@string/notice_type_notice"
        android:textColor="@color/color_gray"
        android:visibility="invisible"/>
</FrameLayout>